Sholl: Fixes and Improvements for 3D bitmap analyses
- Add Sholl_Bitmap_vs_Tracing_Comparison template script
- ImageParser 3D:
  - Fix multi-threaded  progress
  - Improve  chunking. 30% faster on Sholl_Bitmap_vs_Tracing_Comparison  demo stacks
- Correct color coding for discrete step sizes
- API improvements